salesforce/generated/sunrun_ingest_api/desktop-mf/objects/desktop_mf_Dim_Location__dll/fields/LocationID__c.field-meta.xml
<CustomField>
    <fullName>LocationID__c</fullName>
    <label>LocationID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>LocationID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>